--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,33 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: "Poppins", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.container {
+  max-width: 400px;
+  margin: 30px auto;
+  overflow: auto;
+  min-height: 600px;
+  border: 1px solid steelblue;
+  padding: 80px;
+  padding-left: 30px;
+  padding-right: 30px;
+  border-radius: 5px;
+}
+
+img.rounded-corners {
+  border-radius: 30px;
+}
+
+.header {
+  text-align: center;
 }
 
 .btn {
