--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
+@import "bootstrap/dist/css/bootstrap.min.css";
 
 * {
   box-sizing: border-box;
@@ -11,15 +12,16 @@ body {
 }
 
 .container {
-  max-width: 400px;
+  max-width: 420px;
   margin: 30px auto;
   overflow: auto;
   min-height: 600px;
   border: 1px solid steelblue;
-  padding: 80px;
+  padding-top: 10px;
   padding-left: 30px;
   padding-right: 30px;
   border-radius: 5px;
+  background-color: rgb(225, 254, 255);
 }
 
 img.rounded-corners {
@@ -27,12 +29,103 @@ img.rounded-corners {
 }
 
 .header {
+  position: relative;
+  top: 70px;
   text-align: center;
 }
 
-.btn {
+/* .btn {
+  width: 160px;
+  height: 80px;
+} */
+
+.btn:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  opacity: 1;
+}
+
+.btn-homePage {
+  width: 160px;
+  height: 80px;
+}
+
+.inline {
+  display: flex;
+  text-align: center;
+}
+
+.btn-homePage-quiz {
   position: relative;
-  top: 50px;
+  top: 130px;
+  display: inline-block;
+  background: rgb(94, 44, 231);
+  color: rgb(255, 255, 255);
+  border: none;
+  padding: 20px 20px;
+  margin: 5px;
+  border-radius: 25px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 25px;
+  font-family: inherit;
+}
+
+.btn-homePage-games {
+  position: relative;
+  top: 130px;
+  left: 19px;
+  display: inline-block;
+  background: rgb(94, 44, 231);
+  color: rgb(255, 255, 255);
+  border: none;
+  padding: 20px 20px;
+  margin: 5px;
+  border-radius: 25px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 25px;
+  font-family: inherit;
+}
+
+.btn-homePage-flashcards {
+  position: relative;
+  top: 160px;
+  display: inline-block;
+  background: rgb(94, 44, 231);
+  color: rgb(255, 255, 255);
+  border: none;
+  padding: 20px 20px;
+  margin: 5px;
+  border-radius: 25px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 25px;
+  font-family: inherit;
+  padding: 0;
+}
+
+.btn-homePage-progress {
+  position: relative;
+  top: 160px;
+  left: 19px;
+  display: inline-block;
+  background: rgb(94, 44, 231);
+  color: rgb(255, 255, 255);
+  border: none;
+  padding: 20px 20px;
+  margin: 5px;
+  border-radius: 25px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 25px;
+  font-family: inherit;
+  padding: 0;
+  line-height: 1.2;
+}
+
+.btn-quizPage {
+  position: relative;
+  top: 0px;
   display: inline-block;
   background: rgb(94, 44, 231);
   color: rgb(255, 255, 255);
@@ -42,17 +135,47 @@ img.rounded-corners {
   border-radius: 25px;
   cursor: pointer;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 20px;
   font-family: inherit;
 }
 
+.btn-home {
+  position: absolute;
+  top: 400px;
+  display: inline-block;
+  background: rgb(94, 44, 231);
+  color: rgb(255, 255, 255);
+  border: none;
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 25px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 20px;
+  font-family: inherit;
+  margin: 0;
+  top: 150%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .question {
-  position: relative;
-  top: 50px;
+  padding-left: 10px;
+  padding-right: 10px;
+  position: absolute;
+  top: 0px;
+  text-align: center;
+  width: 400px;
+  margin: 0;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .answer {
-  width: 30%;
+  position: relative;
+  top: -50px;
+  width: 330px;
   height: 40px;
   margin: 5px;
   padding: 3px 7px;
@@ -60,21 +183,27 @@ img.rounded-corners {
   border-radius: 12px;
 }
 
+.results-header {
+  text-align: center;
+  background-color: rgb(140, 98, 255);
+  padding: 15px;
+  margin-left: 70px;
+  margin-right: 70px;
+  margin-bottom: 30px;
+  color: rgb(255, 255, 255);
+  border-radius: 15px;
+}
+
 .results-k {
-  /* position: relative;
-  top: 50px; */
   text-align: left;
-  text-indent: 0px;
   width: 100%;
-  height: 40px;
+  height: 20px;
   margin: 5px;
   padding: 3px 7px;
   font-size: 17px;
 }
 
 .results-i {
-  /* position: relative;
-  top: 50px; */
   text-align: left;
   text-indent: 39px;
   width: 100%;
@@ -85,7 +214,6 @@ img.rounded-corners {
 }
 
 .results-entire {
-  width: 400px;
   margin-left: auto;
   margin-right: auto;
   position: relative;
