Game and FlashCard completed

--- a/src/index.css
+++ b/src/index.css
@@ -219,3 +219,11 @@ img.rounded-corners {
   position: relative;
   top: 50px;
 }
+
+.center {
+  position: absolute;
+  margin: 0;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  }
