--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
   padding-top: 10px;
   padding-left: 30px;
   padding-right: 30px;
-  border-radius: 5px;
+  border-radius: 25px;
   background-color: #2c2f33;
 }
 
@@ -31,7 +31,7 @@ img.rounded-corners {
 
 .header {
   position: relative;
-  top: 70px;
+  top: 100px;
   text-align: center;
 }
 
@@ -55,9 +55,39 @@ img.rounded-corners {
   text-align: center;
 }
 
+.btn-settings {
+  display: inline-block;
+  border: none;
+  padding: 10px 11px;
+  margin: 5px;
+  border-radius: 25px;
+  cursor: pointer;
+  text-decoration: none;
+  position: fixed;
+  left: 50%;
+  top: 71px;
+  transform: translate(-390%, -50%);
+  margin: 0 auto;
+}
+
+.btn-profile {
+  display: inline-block;
+  border: none;
+  padding: 11px 12px;
+  margin: 5px;
+  border-radius: 25px;
+  cursor: pointer;
+  text-decoration: none;
+  position: fixed;
+  left: 50%;
+  top: 71px;
+  transform: translate(300%, -50%);
+  margin: 0 auto;
+}
+
 .btn-homePage-quiz {
   position: relative;
-  top: 130px;
+  top: 150px;
   display: inline-block;
   border: none;
   padding: 20px 20px;
@@ -71,7 +101,7 @@ img.rounded-corners {
 
 .btn-homePage-games {
   position: relative;
-  top: 130px;
+  top: 150px;
   left: 19px;
   display: inline-block;
   border: none;
@@ -86,7 +116,7 @@ img.rounded-corners {
 
 .btn-homePage-flashcards {
   position: relative;
-  top: 160px;
+  top: 170px;
   display: inline-block;
   border: none;
   padding: 20px 20px;
@@ -101,7 +131,7 @@ img.rounded-corners {
 
 .btn-homePage-progress {
   position: relative;
-  top: 160px;
+  top: 170px;
   left: 19px;
   display: inline-block;
   border: none;
@@ -159,17 +189,17 @@ img.rounded-corners {
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  top: 50px;
+  top: 30px;
 }
 
 .results-header {
   text-align: center;
   background-color: rgb(140, 98, 255);
-  padding: 15px;
+  padding: 13px;
   margin-left: 70px;
   margin-right: 70px;
   margin-bottom: 30px;
-  border-radius: 15px;
+  border-radius: 10px;
 }
 
 .results-k {
@@ -207,10 +237,13 @@ img.rounded-corners {
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
+  font-size: 23px;
+  background-color: rgb(89, 29, 253);
+  padding: 13px;
+  border-radius: 25px;
 }
 
 .btn-home {
-  position: absolute;
   display: inline-block;
   border: none;
   padding: 10px 13px;
@@ -219,10 +252,11 @@ img.rounded-corners {
   border-radius: 25px;
   cursor: pointer;
   text-decoration: none;
-  margin: 0;
-  top: 160%;
+  position: fixed;
   left: 50%;
+  bottom: 90px;
   transform: translate(-50%, -50%);
+  margin: 0 auto;
 }
 
 .center {
@@ -231,4 +265,17 @@ img.rounded-corners {
   top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
-  }
+  color: #2e3856;
+}
+
+/* .box {
+  height: 100;
+  display: "flex";
+  border: "1px solid black";
+  padding: 8;
+}
+
+.spreadBox {
+  justify-content: "space-around";
+  align-items: "center";
+} */
