--- a/src/index.css
+++ b/src/index.css
@@ -268,23 +268,11 @@ img.rounded-corners {
 .center {
   position: absolute;
   margin: 0;
-  top: 50%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: #2e3856;
 }
-
-/* .box {
-  height: 100;
-  display: "flex";
-  border: "1px solid black";
-  padding: 8;
-}
-
-.spreadBox {
-  justify-content: "space-around";
-  align-items: "center";
-} */
 
 .normal-header {
   position: relative;
@@ -311,7 +299,36 @@ a:active {
   text-decoration: none;
 }
 
+.avg-score {
+  text-align: center;
+  color: white;
+}
+
+.results-header {
+  text-align: center;
+  background-color: rgb(140, 98, 255);
+  padding: 13px;
+  margin-left: 70px;
+  margin-right: 70px;
+  margin-bottom: 30px;
+  border-radius: 10px;
+  color: white;
+}
+
 .progressBar {
   position: relative;
-  top: 50px;
+  top: 30px;
+  height: 50px;
+}
+
+.progress-quiz {
+  position: relative;
+  top: 30px;
+  text-align: center;
+  width: 100%;
+  height: 20px;
+  margin: 5px;
+  padding: 3px 7px;
+  font-size: 20px;
+  color: white;
 }
