--- a/src/index.css
+++ b/src/index.css
@@ -268,6 +268,20 @@ img.rounded-corners {
   color: #2e3856;
 }
 
+.instructions{
+  padding-left: 10px;
+  padding-right: 10px;
+  position: absolute;
+  top: 0px;
+  text-align: left;
+  width: 400px;
+  margin: 0;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
 /* .box {
   height: 100;
   display: "flex";
