--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,12 @@ img.rounded-corners {
   color: white;
 }
 
+.btn-r {
+  background: #5865f2;
+  color: white;
+  float: right;
+}
+
 .btn:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   opacity: 1;
