--- a/src/index.css
+++ b/src/index.css
@@ -230,18 +230,25 @@ img.rounded-corners {
 }
 
 .results-ki {
-  /* overflow: auto; */
-  max-height: 400px;
-  max-width: 500px;
+  max-width: 420px;
+  margin: 30px auto;
+  overflow: auto;
+  max-height: 275px;
+  border: 1px solid steelblue;
+  padding-top: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+  border-radius: 25px;
+  background-color: #2c2f33;
 }
 
 .score {
   text-align: center;
-  position: absolute;
-  margin: 0;
-  top: 140%;
+  position: fixed;
   left: 50%;
+  bottom: 160px;
   transform: translate(-50%, -50%);
+  margin: 0 auto;
   color: white;
   font-size: 23px;
   background-color: rgb(89, 29, 253);
@@ -274,7 +281,7 @@ img.rounded-corners {
   color: #2e3856;
 }
 
-.instructions{
+.instructions {
   padding-left: 10px;
   padding-right: 10px;
   position: absolute;
@@ -291,6 +298,7 @@ img.rounded-corners {
 .normal-header {
   position: relative;
   top: 30px;
+  font-size: 25px;
 }
 
 a {
@@ -345,4 +353,15 @@ a:active {
   padding: 3px 7px;
   font-size: 20px;
   color: white;
+}
+
+.progress-custom {
+  background-color: purple;
+  color: white;
+}
+
+.profilePic {
+  text-align: center;
+  position: relative;
+  top: 30px;
 }
